Fixed Sign-in process

--- a/config.json
+++ b/config.json
@@ -9,6 +9,6 @@
         "creds": "credentials.json"
     },
     "urls": {
-        "starbucks": "https://mysite.starbucks.com/MySchedule/Schedule.aspx"
+        "starbucks": "https://starbucks-wfmr.jdadelivers.com/retail"
     }
 }
