--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "KyleMit",
   "license": "MIT",
   "dependencies": {
-    "googleapis": "^36.0.0",
+    "@google-cloud/local-auth": "^2.1.0",
+    "googleapis": "^105.0.0",
     "moment": "^2.23.0",
     "puppeteer": "^1.11.0"
   }
